[package]
name = "dhcpserver"
version = "0.1.0"
authors = ["soofff <soofff@gmail.com>"]
edition = "2018"

[dependencies]
macaddr = { version="1", features=["serde_std"] }
serde = { version="1.0.126", features=["derive"] }
log = "0.4.14"
serde_yaml = "0.8.17"
async-trait = "0.1.50"
simplelog = "0.10.0"
dhcplib = { git = "https://github.com/soofff/dhcplib", features=["messaging", "with_serde"] }
ascii = { version="1.0.0", features=["serde"] }
url = { version="2.2.2", features=["serde"] }
tera = "1.12.0"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.8.0", features = ["full"] }
pnet = "0.28.0"
structopt = "0.3.22"

[dev-dependencies]
mockito = "0.30.0"
